--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -6,21 +6,33 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="header">
-       <div class="Logo">
-        Logo
+      <div class="header-content">
+        <div class="Logo">
+         Logo
        </div>
         <ul class="links">
           <li><a href="google.com">link one</a></li>
           <li><a href="google.com">link two</a></li>
           <li><a href="google.com">link three</a></li>
         </ul>
-        <h1>This website is awesome</h1>
-        <p>something</p>
-        <button class="sign-up">Sign up</button>
-        <img src="../images/placeholder.png">
+      </div>
     </div>
+
+   <div class="container-1">
+     <div class="header-text">
+      <h1>This website is awesome</h1>
+      <p>something</p>
+      <button class="sign-up">Sign up</button>
+     </div>
+     <div class="image">
+       <img src="../images/placeholder.png">
+     </div>
+   </div>
+
+
     <div class="title">Information</div>
     <div class="container">
         <div class="info">
@@ -52,9 +64,6 @@
 
     <div class="footer">
       footer
-    
-
-
     </div>
       
 </body>
