fixing more stuff

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -19,18 +19,17 @@
           <li><a href="google.com">link three</a></li>
         </ul>
       </div>
+      <div class="container-1">
+        <div class="header-text">
+         <h1>This website is awesome</h1>
+         <p>something</p>
+         <button class="sign-up">Sign up</button>
+        </div>
+        <div class="image"><img src="../images/placeholder.png"></div>
+      </div>
     </div>
 
-   <div class="container-1">
-     <div class="header-text">
-      <h1>This website is awesome</h1>
-      <p>something</p>
-      <button class="sign-up">Sign up</button>
-     </div>
-     <div class="image">
-       <img src="../images/placeholder.png">
-     </div>
-   </div>
+   
 
 
     <div class="title">Information</div>
@@ -52,8 +51,11 @@
           <div class="text">Something</div>
         </div>
     </div>
+
     <div class="quote">
-        <blockquote>this is a quote</blockquote>
+        <blockquote>Why is this so difficult and confusing?
+          <cite>-the person making this landing page</cite>
+        </blockquote>
     </div>
 
     <div class="action">
