--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -19,15 +19,17 @@
           <li><a href="google.com">link three</a></li>
         </ul>
       </div>
-      <div class="container-1">
+      
+      <div class="hero">
         <div class="header-text">
          <h1>This website is awesome</h1>
          <p>something</p>
          <button class="sign-up">Sign up</button>
         </div>
-        <div class="image"><img src="../images/placeholder.png"></div>
-      </div>
+        <div class="adventure"><img src="../images/adventure.jpeg"></div>
     </div>
+    </div>
+  
 
    
 
@@ -35,19 +37,19 @@
     <div class="title">Information</div>
     <div class="container">
         <div class="info">
-          <img src="../images/placeholder.png">
+          <img src="../images/placeholder.png" class="image">
           <div class="text">Something</div>
         </div>
         <div class="info">
-          <img src="../images/placeholder.png">
+          <img src="../images/placeholder.png" class="image">
           <div class="text">Something</div>
         </div>
         <div class="info">
-          <img src="../images/placeholder.png">
+          <img src="../images/placeholder.png" class="image">
           <div class="text">Something</div>
         </div>
         <div class="info">
-          <img src="../images/placeholder.png">
+          <img src="../images/placeholder.png" class="image">
           <div class="text">Something</div>
         </div>
     </div>
@@ -58,11 +60,18 @@
         </blockquote>
     </div>
 
-    <div class="action">
-        <h3>Something</h3>
-        <p>Sign up</p>
-        <button class="sign-up">Sign up</button>
+
+    
+    <div class="background">
+     <div class="action">
+      <div class="action-text">
+       <h3>Something</h3>
+       <p>sign up now</p>
+      </div>
+       <button class="sign-up">Sign up</button>
     </div>
+  </div>
+
 
     <div class="footer">
       footer
