--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -67,7 +67,7 @@
        <h3>Something</h3>
        <p>sign up now</p>
       </div>
-       <button class="sign-up">Sign up</button>
+       <button class="sign-up2">Sign up</button>
     </div>
   </div>
 
