--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -22,7 +22,7 @@
       <div class="hero">
         <div class="header-text">
          <h1>This website is awesome</h1>
-         <p>something</p>
+         <p>This website has some subtext that goes here under the main title. It's a smaller font and color is lower contrast.</p>
          <button class="sign-up">Sign up</button>
         </div>
         <div class="adventure"><img src="../images/adventure.jpeg"></div>
@@ -55,7 +55,7 @@
 
     <div class="quote">
         <blockquote>Why is this so difficult and confusing?
-          <cite>-the person making this landing page</cite>
+          <cite>-The person making this landing page</cite>
         </blockquote>
     </div>
 
@@ -64,8 +64,8 @@
     <div class="background">
      <div class="action">
       <div class="action-text">
-       <h3>Something</h3>
-       <p>sign up now</p>
+       <h3>Sign up right now!</h3>
+       <p>Please sign up I tried really hard.</p>
       </div>
        <button class="sign-up2">Sign up</button>
     </div>
@@ -73,7 +73,7 @@
 
 
     <div class="footer">
-      footer
+      I did it.
     </div>
       
 </body>
